[gd_scene load_steps=18 format=3 uid="uid://t24b14fe2cqp"]

[ext_resource type="PackedScene" uid="uid://6bvwc7dldlb1" path="res://assets/player_start_pos.tscn" id="1_g3cyp"]
[ext_resource type="Script" path="res://scripts/choice_manager.gd" id="2_j4s2l"]
[ext_resource type="Script" path="res://scripts/Floating_ui.gd" id="3_xmwka"]
[ext_resource type="PackedScene" uid="uid://cwxikevd2febl" path="res://scenes/ui/target_FR.tscn" id="4_86frh"]
[ext_resource type="PackedScene" uid="uid://pl1b8cmvnwdm" path="res://scenes/ui/target_EN.tscn" id="5_5gba3"]
[ext_resource type="PackedScene" uid="uid://conusqvj0ho0d" path="res://scenes/ui/target_VOSTFR.tscn" id="7_mlwhy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0go3u"]
size = Vector3(1, 1, 0.00664818)

[sub_resource type="ViewportTexture" id="ViewportTexture_2y4di"]
viewport_path = NodePath("ChoicePanels/opt1")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_34abf"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_2y4di")

[sub_resource type="QuadMesh" id="QuadMesh_t0675"]

[sub_resource type="ViewportTexture" id="ViewportTexture_sh0th"]
viewport_path = NodePath("ChoicePanels/opt2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i68ra"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_sh0th")

[sub_resource type="QuadMesh" id="QuadMesh_b1le8"]

[sub_resource type="ViewportTexture" id="ViewportTexture_d3kw1"]
viewport_path = NodePath("ChoicePanels/opt3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p1osj"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_d3kw1")

[sub_resource type="QuadMesh" id="QuadMesh_dfdm3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vptju"]
size = Vector3(100, 1, 100)

[node name="StartMenu" type="Node3D"]

[node name="playerStartPos" parent="." instance=ExtResource("1_g3cyp")]
transform = Transform3D(0.285104, 0, 0, 0, 0.285104, 0, 0, 0, 0.285104, -0.695346, 1.68749, 2.30809)

[node name="ChoicePanels" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_j4s2l")

[node name="Label3D" type="Label3D" parent="ChoicePanels"]
transform = Transform3D(1.77679, 0, 0, 0, 1.77679, 0, 0, 0, 1.77679, 0.058, 4.219, -5.389)
text = "Choisissez une version :"

[node name="FloatingOpt1" type="StaticBody3D" parent="ChoicePanels" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.67398, 0, 0, 0, 1.67398, 0, 0, 0, 1.67398, 0, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_xmwka")
control = NodePath("../opt1/Target_FR")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/FloatingOpt1"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/FloatingOpt1"]
material_override = SubResource("StandardMaterial3D_34abf")
mesh = SubResource("QuadMesh_t0675")

[node name="Label3D" type="Label3D" parent="ChoicePanels/FloatingOpt1"]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 0, -0.6, 0)
visible = false
text = "Audio français"

[node name="FloatingOpt2" type="StaticBody3D" parent="ChoicePanels" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.61032, 0, 0.750904, 0, 1.77679, 0, -0.750904, 0, 1.61032, -2.5, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_xmwka")
control = NodePath("../opt2/Target_EN")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/FloatingOpt2"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/FloatingOpt2"]
material_override = SubResource("StandardMaterial3D_i68ra")
mesh = SubResource("QuadMesh_b1le8")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="ChoicePanels/FloatingOpt2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
visible = false
text = "Audio anglais"

[node name="FloatingOpt3" type="StaticBody3D" parent="ChoicePanels" node_paths=PackedStringArray("control") groups=["UI_target"]]
transform = Transform3D(1.61032, 0, -0.750904, 0, 1.77679, 0, 0.750904, 0, 1.61032, 2.5, 2.8, -5)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_xmwka")
control = NodePath("../opt3/Target_VOSTFR")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChoicePanels/FloatingOpt3"]
shape = SubResource("BoxShape3D_0go3u")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ChoicePanels/FloatingOpt3"]
material_override = SubResource("StandardMaterial3D_p1osj")
mesh = SubResource("QuadMesh_dfdm3")
skeleton = NodePath("")

[node name="Label3D" type="Label3D" parent="ChoicePanels/FloatingOpt3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
visible = false
text = "Audio Latin ancien sous-titré Français"
autowrap_mode = 2
width = 300.0

[node name="opt1" type="SubViewport" parent="ChoicePanels"]
transparent_bg = true
render_target_update_mode = 4

[node name="Target_FR" parent="ChoicePanels/opt1" instance=ExtResource("4_86frh")]

[node name="opt2" type="SubViewport" parent="ChoicePanels"]
transparent_bg = true
render_target_update_mode = 4

[node name="Target_EN" parent="ChoicePanels/opt2" instance=ExtResource("5_5gba3")]

[node name="opt3" type="SubViewport" parent="ChoicePanels"]
transparent_bg = true
render_target_update_mode = 4

[node name="Target_VOSTFR" parent="ChoicePanels/opt3" instance=ExtResource("7_mlwhy")]

[node name="floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.145661, 0.716851, -3.02968)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
shape = SubResource("BoxShape3D_vptju")
